# vsc-administration

./: .gitignore  .travis.yml  README.md  bdist_rpm.sh  klad  setup.cfg  setup.py  shared_setup.py
lib/vsc/: __init__.py
lib/vsc/administration/: __init__.py  group.py  institute.py  ldapsync.py  project.py  tools.py  user.py  vo.py
lib/vsc/administration/slurm/: __init__.py  sync.py
test/: 00-import.py  __init__.py  filesystem_info.conf  icingadb.py  ldapsync.py  slurm.py  suite.py  sync_vsc_email.py  tools.py  user.py  vo.py
ward_hack/: sync_slurm_acct.py
