[bdist_rpm]
requires = python-vsc-accountpage-clients >= 0.9.0
           python-vsc-base >= 2.4.16
           python-vsc-config >= 1.31.2
           python-vsc-filesystems >= 0.19
           python-vsc-ldap >= 1.1
           pytz
           python-ldap
           python-vsc-ldap-extension >= 1.3
           python-vsc-utils >= 1.4.4
           python-lockfile >= 0.9.1

[metadata]
description-file = README.md
